--- a/Webpack zadanie4 Add Todo List/src/containers/App.css
+++ b/Webpack zadanie4 Add Todo List/src/containers/App.css
@@ -1,7 +1,7 @@
 
 .TodoApp {
-    background-color: #F5F5F5;
-    color: #222;
+    background-color: #0c232a;
+    color: #fff;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -26,4 +26,27 @@
 }
 .todoItemsList > p:hover{
   background-color: #335b86;
+}
+.todoSingleItem{
+  background-color: #475b81;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+.todoSingleItem:hover{
+  background-color: #637cac;
+}
+.orderNumber{
+  width: 30px;
+  text-align: center;
+  margin-right: 20px;
+}
+.itemButton{
+  height: 100%;
+  width: 100%;
+  padding-right: 10px;
+}
+.itemButton span{
+  padding: 0 10px;
 }
