--- a/Express zadanie 4 myPugApp/views/pugProfile.pug
+++ b/Express zadanie 4 myPugApp/views/pugProfile.pug
@@ -6,7 +6,7 @@ html
     title= appTitle
     style
       include myPug.css
-  body.landingPage
-    include ./pugNav.pug
+  body.profilePage
+    include ./pugNavLogged.pug
     div.mainCont
-      p.mainLead #{mainLead}
+      p.mainLead User Profile
