--- a/Express zadanie 4 myPugApp/views/myPug.css
+++ b/Express zadanie 4 myPugApp/views/myPug.css
@@ -3,10 +3,19 @@ html{
 }
 body{
   height: 100vh;
-  background-image: url('./images/pug_bg.jpg');
   background-size: cover;
+  background-position: center;
   margin: 0;
   font-family: 'Muli', sans-serif;
+}
+.landingPage{
+  background-image: url('./images/pug_bg.jpg');
+}
+.logPage{
+  background-image: url('/images/pug_bg.jpg');
+}
+.profilePage{
+  background-image: url('./images/pug_wallpaper_7.jpg');
 }
 .application-nav{
   width: 100%;
@@ -23,6 +32,7 @@ body{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 .mainLead{
   color: #fff;
@@ -30,6 +40,8 @@ body{
   text-transform: uppercase;
   font-size: 10rem;
   font-weight: 900;
+  position: relative;
+  z-index: 10;
 }
 .navTitle{
   padding-bottom: 0.2rem;
@@ -94,4 +106,56 @@ a:hover > .abg{
   padding-bottom: 0.2rem;
   font-size: 2.2rem;
   color: #fff;
+}
+form.loginForm{
+  position: relative;
+  z-index: 50;
+  width: 36rem;
+  min-height: 30rem;
+  background-color: rgba(2,10,11,0.6);
+  bottom: 25rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+p.formTitle{
+  margin: 2rem 0;
+  color: #fff;
+  font-size: 2.6rem;
+}
+form.loginForm label{
+  color: #fff;
+  width: 32rem;
+  text-align: left;
+  font-size: 1.6rem;
+  margin-bottom: 0.8rem;
+}
+form.loginForm input{
+  width: 32rem;
+  height: 3.2rem;
+  font-size: 1.8rem;
+  padding: 0 0.6rem;
+  color: #252525;
+  box-sizing: border-box;
+}
+form.loginForm input#login{
+  margin-bottom: 0.6rem;
+}
+form.loginForm input#password{
+  margin-bottom: 2rem;
+}
+form.loginForm input.submitButton{
+  width: 20rem;
+  height: 4rem;
+  margin: 1.6rem 0 1rem 0;
+  cursor: pointer;
+  transition: 0.3s;
+  -moz-transition: 0.3s;
+  -webkit-transition: 0.3s;
+  border: none;
+  color: #fff;
+  background-color: #0575e6;
+}
+form.loginForm input.submitButton:hover{
+  background-color: #11be56;
 }
